fix the spacing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: var(--main);
 }
+.container {
+    width: 100%;
+    height: 300px;
+}
 .bg {
     width: 100%;
     height: 300px;
@@ -40,10 +44,10 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    opacity: 1; /* Initially visible */
+    opacity: 1; 
 }
 .menu-items.hidden {
-    opacity: 0; /* Hide menu items */
+    opacity: 0; 
 }
 .menu-items li {
     margin: 10px;
@@ -67,7 +71,6 @@ h2 {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    height: 150px;
 }
 .search {
     padding-left: 5px;
@@ -87,7 +90,7 @@ h2 {
     width: 100px;
 }
 .search, .button {
-    margin: 100px 10px 20px 10px;
+    margin: 20px 10px;
     height: 40px;
     border-radius: 5px;
     position: relative;
@@ -140,7 +143,7 @@ h2 {
         width: 200px;
     }
     .search, .button {
-        margin: 70px 5px 0px 5px;
+        margin: 15px 5px;
     }
     .button {
         width: 80px;
